Product selection page controller
